fix: minor fixes Refs: XRDDEV-2727

--- a/Docker/securityserver/Dockerfile
+++ b/Docker/securityserver/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get -qq update \
     && apt-get -qq -y install --no-install-recommends \
         ca-certificates gnupg supervisor net-tools iproute2 locales \
         openjdk-21-jre-headless rlwrap ca-certificates-java \
-        crudini adduser expect curl rsyslog dpkg-dev \
+        crudini adduser expect curl rsyslog \
     && echo "LC_ALL=en_US.UTF-8" >>/etc/environment \
     && locale-gen en_US.UTF-8 \
     && adduser --quiet --system --uid 998 --home /var/lib/postgresql --no-create-home --shell /bin/bash --group postgres \
@@ -19,7 +19,7 @@ RUN apt-get -qq update \
     && echo "xroad-proxy xroad-common/username string xrd" | debconf-set-selections \
     && apt-get -qq -y install --no-install-recommends postgresql postgresql-contrib \
     && apt-get -qq clean \
-    && rm -rf var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/*
 
 # Xroad SS from external packages
 FROM base AS securityserver-external
@@ -44,12 +44,13 @@ RUN echo "deb $REPO $DIST $COMPONENT" >/etc/apt/sources.list.d/xroad.list \
     && rm -f /etc/apt/sources.list.d/xroad.list \
     && rm -rf /tmp/repo \
     && apt-get remove -y -qq dpkg-dev && apt-get -qq clean && apt-get -qq autoremove \
-    && rm -rf var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/*
 
 # Xroad SS from internal packages
 FROM base AS securityserver-internal
 
 RUN --mount=type=bind,source=build/packages,target=/tmp/packages \
+       apt-get update && apt-get -y -qq install --no-install-recommends dpkg-dev; \
        cp -r /tmp/packages /tmp/repo \
     && cd /tmp/repo && dpkg-scanpackages -m . > Packages \
     && echo "deb [trusted=yes] file:/tmp/repo /" >/etc/apt/sources.list.d/xroad.list \
@@ -58,14 +59,14 @@ RUN --mount=type=bind,source=build/packages,target=/tmp/packages \
     # Install
     && pg_ctlcluster 16 main start \
     && apt-get update \
-    && apt-get -y -qq install xroad-securityserver xroad-autologin xroad-addon-hwtokens xroad-addon-opmonitoring \
+    && apt-get -y -qq install xroad-securityserver xroad-autologin xroad-addon-opmonitoring \
     && apt-get -qq clean \
     && pg_ctlcluster 16 main stop \
     # Clean up
     && rm -f /etc/apt/sources.list.d/xroad.list \
     && rm -rf /tmp/repo \
     && apt-get remove -y -qq dpkg-dev && apt-get -qq clean && apt-get -qq autoremove \
-    && rm -rf var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/*
 
 FROM securityserver-${PACKAGE_SOURCE} AS final-base
 RUN mkdir -p /root/etc/xroad \
@@ -100,14 +101,24 @@ EXPOSE 8080 8443 4000 5432 5500 5577 5558 80
 FROM final-base AS final
 
 FROM final-base AS final-hwtoken
-RUN apt-get update \
-    && apt-get -y -qq install --no-install-recommends softhsm2 \
+RUN --mount=type=bind,source=build/packages,target=/tmp/packages apt-get -qq update \
+    && apt-get -y -qq install --no-install-recommends dpkg-dev \
+    && cp -r /tmp/packages /tmp/repo \
+    && cd /tmp/repo && dpkg-scanpackages -m . > Packages \
+    && echo "deb [trusted=yes] file:/tmp/repo /" >/etc/apt/sources.list.d/xroad.list \
+    && apt-get -qq update \
+    && apt-get -y -qq install --no-install-recommends xroad-addon-hwtokens softhsm2 \
     && apt-get -qq clean \
+    && rm -f /etc/apt/sources.list.d/xroad.list \
+    && rm -rf /tmp/repo \
+    && apt-get -y -qq purge dpkg-dev && apt-get -qq autoremove -y \
     && rm -rf /var/lib/apt/lists/* \
     && adduser xroad softhsm
 
 COPY files/ss-hwtoken-entrypoint.sh /root/hwtoken-entrypoint.sh
-
+COPY --chown=root:root files/ss-hwtoken-xroad.conf /etc/supervisor/conf.d/xroad.conf
+COPY --chown=root:root files/ss-hwtoken-login-inactive-token.sh /usr/share/xroad/autologin/login-inactive-token.sh
+RUN chmod 755 /usr/share/xroad/autologin/login-inactive-token.sh
 CMD ["/root/hwtoken-entrypoint.sh"]
 
 VOLUME ["/var/lib/softhsm/tokens"]
