--- a/.github/workflows/publish_images.yaml
+++ b/.github/workflows/publish_images.yaml
@@ -3,7 +3,7 @@ on:
   workflow_run:
     workflows: ["Build and test"]
     types: [completed]
-    branches: [XRDDEV-2727]
+    branches: [develop]
 env:
   REGISTRY: ghcr.io
   XROAD_HOME: ${{ github.workspace }}
