--- a/src/service/proxy/proxy-application/src/main/resources/application.yaml
+++ b/src/service/proxy/proxy-application/src/main/resources/application.yaml
@@ -51,3 +51,10 @@ quarkus:
               max-file-size: 100m
               file-suffix: .yyyy-MM-dd.zip
               rotate-on-boot: false
+
+xroad:
+  proxy:
+    certificate-provisioning:
+      common-name: ${XROAD_HOST:localhost}
+      ip-subject-alt-names:
+        - 127.0.0.1
