chore: drop devices.ini, use property source
Refs: XRDDEV-2799

--- a/src/packages/src/xroad/default-configuration/devices.ini
+++ b/src/packages/src/xroad/default-configuration/devices.ini
@@ -21,6 +21,10 @@
 ;   the slot index part which may be diffirent for the token replicas).
 ; sign_mechanism = STRING (optional, default: CKM_RSA_PKCS)
 ;   Specifies the signing mechanism. Supported values: CKM_RSA_PKCS, CKM_RSA_PKCS_PSS.
+; rsa_sign_mechanism = STRING (optional, default: CKM_RSA_PKCS)
+;    Specifies the signing mechanism. Supported values: CKM_RSA_PKCS, CKM_RSA_PKCS_PSS. If value isn't provided then defaults to value of *sign_mechanism* if present.
+; ec_sign_mechanism = STRING (optional, default: CKM_ECDSA)
+;    Specifies the signing mechanism for EC keys. Supported values: CKM_ECDSA.
 ; pub_key_attribute_encrypt = BOOLEAN (optional, default: true)
 ;   Indicates whether public key can be used for encryption.
 ; pub_key_attribute_verify = BOOLEAN (optional, default: true)
