chore: prop name fix
Refs: XRDDEV-2799

--- a/src/common/common-properties/src/main/resources/xroad-common.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-common.yaml
@@ -8,7 +8,7 @@ quarkus:
     url: "${XROAD_SECRET_STORE_SCHEME:http}://${XROAD_SECRET_STORE_HOST:127.0.0.1}:${XROAD_SECRET_STORE_PORT:8200}"
     authentication:
       client-token: "${XROAD_SECRET_STORE_TOKEN}"
-    connection-timeout: 15S
+    connect-timeout: 15S
     read-timeout: 10S
     kv-secret-engine-version: 1
     kv-secret-engine-mount-path: xrd-secret
