chore: Relocate op-monitor tls credetials creation from proxy to op-monitor

--- a/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
+++ b/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
@@ -17,3 +17,11 @@ quarkus:
       file:
         enable: true
         path: /var/log/xroad/op-monitor.log
+
+xroad:
+  op-monitor:
+    tls:
+      certificate-provisioning:
+        common-name: ${XROAD_HOST:localhost}
+        ip-subject-alt-names:
+          - 127.0.0.1
