--- a/deployment/security-server/docker/.env.github
+++ b/deployment/security-server/docker/.env.github
@@ -1,7 +1,7 @@
 CONFIGURATION_CLIENT_IMG=localhost:5000/ss-configuration-client:latest
 PROXY_IMG=localhost:5000/ss-proxy:latest
 PROXY_UI_IMG=localhost:5000/ss-proxy-ui-api:latest
-SIGNER_IMG=localhost:5000/ss-signer:latest
+SIGNER_IMG=localhost:5000/ss-signer-dev:latest
 BACKUP_MANAGER_IMG=localhost:5000/ss-backup-manager:latest
 MONITOR_IMG=localhost:5000/ss-monitor:latest
 OP_MONITOR_IMG=localhost:5000/ss-op-monitor:latest
