--- a/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
+++ b/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
@@ -8,6 +8,8 @@ services:
       - JAVA_TOOL_OPTIONS=-Dxroad.internal.passwordstore-provider=file
       - XROAD_SIGNER_OCSP_RESPONSE_RETRIEVAL_ACTIVE=true
       - QUARKUS_LOG_LEVEL=DEBUG
+    volumes:
+      - ../../../src/security-server/system-test/build/resources/intTest/container-files/etc/xroad/conf.d:/etc/xroad/conf.d
   proxy:
     networks:
       xrd-ss-network:
