--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -189,7 +189,7 @@ jobs:
           docker pull localhost:5000/ss-backup-manager:latest
           docker pull localhost:5000/ss-configuration-client:latest
           docker pull localhost:5000/ss-proxy:latest
-          docker pull localhost:5000/ss-signer:latest
+          docker pull localhost:5000/ss-signer-dev:latest
           docker pull localhost:5000/ss-monitor:latest
           docker pull localhost:5000/ss-op-monitor:latest
           docker pull localhost:5000/ss-proxy-ui-api:latest
@@ -200,7 +200,7 @@ jobs:
           docker save -o ${{ runner.temp }}/docker-images/ss-backup-manager.tar localhost:5000/ss-backup-manager:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-configuration-client.tar localhost:5000/ss-configuration-client:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-proxy.tar localhost:5000/ss-proxy:latest
-          docker save -o ${{ runner.temp }}/docker-images/ss-signer.tar localhost:5000/ss-signer:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-signer-dev.tar localhost:5000/ss-signer-dev:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-monitor.tar localhost:5000/ss-monitor:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-op-monitor.tar localhost:5000/ss-op-monitor:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-proxy-ui-api.tar localhost:5000/ss-proxy-ui-api:latest
