feat: monitor healthcheck with monit PoC
Added and configured monit to xrd-dev-stack as a proof-of-concept.
monit polls ss1 healthcheck endpoint and sends an e-mail notification
when healthcheck query fails.

Refs: XRDDEV-1995

--- a/Docker/xrd-dev-stack/compose.dev.yaml
+++ b/Docker/xrd-dev-stack/compose.dev.yaml
@@ -81,6 +81,14 @@ services:
       - "1025:1025"
     networks:
       - xroad-network
+  monit:
+    container_name: monit
+    volumes:
+      - ./monit/monitrc:/etc/monitrc
+    ports:
+      - "2812:2812"
+    networks:
+      - xroad-network
   hurl:
     networks:
       - xroad-network
