chore: quarkus version up, signer-application tests temporarily disabled
Refs: XRDDEV-2799

--- a/src/service/backup-manager/backup-manager-application/src/main/resources/application.yaml
+++ b/src/service/backup-manager/backup-manager-application/src/main/resources/application.yaml
@@ -26,14 +26,14 @@ quarkus:
   quarkus:
     log:
       file:
-        enable: true
+        enabled: true
         path: /var/log/xroad/backup_manager.log
 
 "%test":
   quarkus:
     log:
       file:
-        enable: false
+        enabled: false
   xroad:
     backup-manager:
       rpc:
