--- a/src/service/message-log-archiver/message-log-archiver-application/src/main/resources/application.yaml
+++ b/src/service/message-log-archiver/message-log-archiver-application/src/main/resources/application.yaml
@@ -15,11 +15,11 @@ quarkus:
   quarkus:
     log:
       file:
-        enable: true
+        enabled: true
         path: /var/log/xroad/message-log-archiver.log
 
 "%test":
   quarkus:
     log:
       file:
-        enable: false
+        enabled: false
