--- a/src/service/monitor/monitor-application/src/main/resources/application-native.yaml
+++ b/src/service/monitor/monitor-application/src/main/resources/application-native.yaml
@@ -1,7 +1,7 @@
 quarkus:
   log:
     console:
-      enable: false
+      enabled: false
     file:
-      enable: true
+      enabled: true
       path: /var/log/xroad/monitor.log
