--- a/src/service/signer/signer-application/src/main/resources/application.yaml
+++ b/src/service/signer/signer-application/src/main/resources/application.yaml
@@ -25,7 +25,7 @@ quarkus:
   quarkus:
     log:
       file:
-        enable: true
+        enabled: true
         path: /var/log/xroad/signer.log
 
 "%ss":
@@ -37,7 +37,7 @@ quarkus:
   quarkus:
     log:
       file:
-        enable: false
+        enabled: false
   xroad:
     signer:
       rpc:
