chore: move softhsm2 initialization to docker compose Refs: XRDDEV-2727

--- a/Docker/xrd-dev-stack/.env
+++ b/Docker/xrd-dev-stack/.env
@@ -1,6 +1,5 @@
 CS_IMG=ghcr.io/nordic-institute/xrddev-central-server:latest
-SS0_IMG=ghcr.io/nordic-institute/xrddev-security-server:latest
-SS1_IMG=ghcr.io/nordic-institute/xrddev-security-server-hwtoken:latest
+SS_IMG=ghcr.io/nordic-institute/xrddev-security-server:latest
 CA_IMG=ghcr.io/nordic-institute/xrddev-testca:latest
 IS_OPENAPI_IMG=ghcr.io/nordic-institute/xrddev-example-restapi:latest
 IS_SOAP_IMG=niis/example-adapter:latest
