--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -345,8 +345,7 @@ jobs:
           push: true
           build-args: |
             PACKAGE_SOURCE=internal
-          target: final-hwtoken
-          tags: localhost:5000/xrd-securityserver-hwtoken:${{ github.sha }}
+          tags: localhost:5000/xrd-securityserver:${{ github.sha }}
       - name: Security Server test setup measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
         with:
@@ -354,7 +353,7 @@ jobs:
           label: 'Set up Security Server tests'
       - name: Run Security Server system tests
         working-directory: ./src
-        run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:system-test:systemTest -PsystemTestSsImageName=localhost:5000/xrd-securityserver-hwtoken:${{ github.sha }}
+        run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:system-test:systemTest -PsystemTestSsImageName=localhost:5000/xrd-securityserver:${{ github.sha }}
       - name: Test Security Server measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
         with:
@@ -447,8 +446,7 @@ jobs:
           push: true
           build-args: |
             PACKAGE_SOURCE=internal
-          target: final-hwtoken
-          tags: localhost:5000/xrd-securityserver-hwtoken:${{ github.sha }}
+          tags: localhost:5000/xrd-securityserver:${{ github.sha }}
       - name: E2E test setup measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
         with:
@@ -460,7 +458,7 @@ jobs:
         run: >
           ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:e2e-test:e2eTest 
           -Pe2eTestCSImage=localhost:5000/xrd-centralserver:${{ github.sha }} 
-          -Pe2eTestSSImage=localhost:5000/xrd-securityserver-hwtoken:${{ github.sha }}
+          -Pe2eTestSSImage=localhost:5000/xrd-securityserver:${{ github.sha }}
       - name: E2E test measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
         with:
