fix: add back needed EXPOSE ports Refs: XRDDEV-2666

--- a/Docker/centralserver/Dockerfile
+++ b/Docker/centralserver/Dockerfile
@@ -92,3 +92,4 @@ COPY --chown=root:root files/cs-xroad.conf /etc/supervisor/conf.d/xroad.conf
 CMD ["/root/entrypoint.sh"]
 
 VOLUME ["/etc/xroad", "/var/lib/xroad", "/var/lib/postgresql/16/main/"]
+EXPOSE 4000
