--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -39,12 +39,11 @@ spring:
 server:
   port: 4000
   ssl:
-    key-store: /etc/xroad/ssl/proxy-ui-api.p12
-    key-store-password: proxy-ui-api
     enabled: true
     ciphers: TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
     protocol: TLS
     enabled-protocols: TLSv1.2,TLSv1.3
+    bundle: vault # Use TLS key & certificate provided by VaultSslBundleRegistrar
   compression:
     enabled: true
     mime-types: application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css,image/jpeg
@@ -72,7 +71,11 @@ xroad:
     signing-key-algorithm: RSA
     security-server-url: https://localhost:8443
     reserved-service-codes: listClients,listMethods,allowedMethods,getWsdl,getOpenAPI,getSecurityServerMetrics,getSecurityServerOperationalData,getSecurityServerHealthData
-
+    tls:
+      certificate-provisioning:
+        common-name: ${XROAD_HOST:localhost}
+        ip-subject-alt-names:
+          - 127.0.0.1
 
 file-upload-endpoints:
   endpoint-definitions:
