chore: proxy-ui-api loading acme and email notification settings from properties
Refs: XRDDEV-2952

--- a/src/security-server/admin-service/application/src/test/resources/application-test.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application-test.yml
@@ -40,3 +40,11 @@ xroad:
   common:
     rpc:
       use-tls: false
+
+  mail-notification: |
+    host: mailpit
+    port: 587
+    username: testusername
+    password: testpassword
+    contacts:
+      'DEV:COM:1234': member1@example.org
