--- a/ansible/roles/init-dev-configuration/files/ss/etc/xroad/conf.d/local.yaml
+++ b/ansible/roles/init-dev-configuration/files/ss/etc/xroad/conf.d/local.yaml
@@ -4,3 +4,26 @@ xroad:
       source: REMOTE
   proxy-ui-api:
     acme-challenge-port-enabled: true
+
+  acme: |
+    eab-credentials:
+      certificate-authorities:
+        'Test CA':
+          mac-key-base64-encoded: true
+          members:
+            'DEV:COM:1234':
+              #kid: keyid_1
+              #mac-key: 78a6d08bb1d1b91ab116790e1ab59517352fa5e0c8ac360c3a80255d80de2259
+              auth-kid: keyid_2
+              auth-mac-key: addfdbb19965e85623c124a88d085eae50a7f7f4f570989e3a320a81c3119625
+              sign-kid: keyid_3
+              sign-mac-key: 96d7380f5ea8de06912a4520d0adca616848b5e70cb3d0bd748af5b33507ddde
+    account-keystore-password: testPassword1234
+
+  mail-notification: |
+    host: xrd-cs # This is hardcoded to lxd dev env host.
+    port: 1025
+    username: testusername
+    password: testpassword
+    contacts:
+      'DEV:COM:1234': member1@example.org
