chore: moving local.yaml and db.properties loading to %native profile in quarkus
Refs: XRDDEV-2952

--- a/src/service/configuration-client/configuration-client-application/src/main/resources/application.yaml
+++ b/src/service/configuration-client/configuration-client-application/src/main/resources/application.yaml
@@ -3,8 +3,6 @@ quarkus:
     name: configuration-client
   config:
     locations:
-      - /etc/xroad/conf.d/local.yaml
-      - /etc/xroad/db.properties
       - xroad-common.yaml
       - xroad-logging.yaml
   scheduler:
@@ -29,6 +27,10 @@ quarkus:
 
 "%native":
   quarkus:
+    config:
+      locations:
+        - /etc/xroad/conf.d/local.yaml
+        - /etc/xroad/db.properties
     log:
       file:
         enable: true
@@ -36,6 +38,10 @@ quarkus:
 
 "%cli":
   quarkus:
+    config:
+      locations:
+        - /etc/xroad/conf.d/local.yaml
+        - /etc/xroad/db.properties
     datasource:
       active: false
     scheduler:
