--- a/src/service/proxy/proxy-application/src/main/resources/application.yaml
+++ b/src/service/proxy/proxy-application/src/main/resources/application.yaml
@@ -3,8 +3,6 @@ quarkus:
     name: proxy
   config:
     locations:
-      - /etc/xroad/conf.d/local.yaml
-      - /etc/xroad/db.properties
       - xroad-common.yaml
       - xroad-logging.yaml
 
@@ -16,6 +14,10 @@ quarkus:
 
 "%native":
   quarkus:
+    config:
+      locations:
+        - /etc/xroad/conf.d/local.yaml
+        - /etc/xroad/db.properties
     log:
       console:
         enable: false
