--- a/src/service/monitor/monitor-application/src/main/resources/application.yaml
+++ b/src/service/monitor/monitor-application/src/main/resources/application.yaml
@@ -3,8 +3,6 @@ quarkus:
     name: monitor
   config:
     locations:
-      - /etc/xroad/conf.d/local.yaml
-      - /etc/xroad/db.properties
       - xroad-common.yaml
       - xroad-logging.yaml
 
@@ -13,3 +11,10 @@ quarkus:
     env-monitor:
       rpc:
         listen-address: 0.0.0.0
+
+"%native":
+  quarkus:
+    config:
+      locations:
+        - /etc/xroad/conf.d/local.yaml
+        - /etc/xroad/db.properties
