--- a/src/central-server/management-service/application/src/main/resources/application.yml
+++ b/src/central-server/management-service/application/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 # shared properties for dev/prod runtime
 # test runtime has a separate application.properties
 spring:
+  config:
+    import:
+      - classpath:/xroad-common.yaml
   servlet:
     multipart.enabled: false
   jackson:
@@ -32,6 +35,4 @@ xroad:
     rate-limit-requests-per-minute: 10
     rate-limit-cache-size: 10_000
     rate-limit-expire-after-access-minutes: 2
-    api-trust-store: ${xroad.conf.path:/etc/xroad}/ssl/center-admin-service.p12
-    api-trust-store-password: center-admin-service
     api-base-url: https://127.0.0.1:4000/api/v1
