chore: enable possibility to turn on trace level logs for x-road
Refs: XRDDEV-2952

--- a/src/common/common-properties/src/main/resources/xroad-logging.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-logging.yaml
@@ -3,6 +3,8 @@ quarkus:
     level: INFO
     min-level: TRACE
     category:
+      "org.niis.xroad":
+        min-level: TRACE
       "io.quarkus":
         level: INFO #TODO should be reduced to INFO once development is done
       "io.smallrye":
