chore: missing op-monitor rpc config
Refs: XRDDEV-2952

--- a/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
+++ b/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
@@ -29,6 +29,7 @@ services:
   ui:
     environment:
       - SERVER_SERVLET_SESSION_TIMEOUT=1m
+      - XROAD_COMMON_RPC_CHANNEL_OP_MONITOR_HOST=op-monitor
     ports:
       - 0:9999 # debug port
     volumes:
