--- a/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
+++ b/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
@@ -28,6 +28,7 @@ services:
 
   ui:
     environment:
+      - JAVA_TOOL_OPTIONS=-Dquarkus.config.locations=/etc/xroad/conf.d/local.yaml
       - SERVER_SERVLET_SESSION_TIMEOUT=1m
       - XROAD_COMMON_RPC_CHANNEL_OP_MONITOR_HOST=op-monitor
     ports:
@@ -37,9 +38,6 @@ services:
     depends_on:
       testca:
         condition: service_healthy
-    # workaround to set the `quarkus.config.locations` only for quarkus app
-    entrypoint: [ "bash", "-c", "JAVA_TOOL_OPTIONS=-Dquarkus.config.locations=/etc/xroad/conf.d/local.yaml bash /opt/app/entrypoint.sh" ]
-
 
   backup-manager:
     environment:
