chore: drop devices.ini in favour on centralised yaml property source (#2947)
* chore: drop devices.ini, use property source

Refs: XRDDEV-2799

* chore: devices.ini migration

Refs: XRDDEV-2799

* chore: bump quarkus version

Refs: XRDDEV-2799

* chore: quarkus-vault version down

Refs: XRDDEV-2799

* chore: bump quarkus version to 3.25.0

Refs: XRDDEV-2799

* chore: prop name fix

Refs: XRDDEV-2799

* chore: gradle version up

Refs: XRDDEV-2799

* chore: quarkus version up, signer-application tests temporarily disabled

Refs: XRDDEV-2799

* chore: dropping devices.ini in docker containers

Refs: XRDDEV-2799

* chore: axios version bump

Refs: XRDDEV-2799

--- a/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
+++ b/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ quarkus:
   quarkus:
     log:
       file:
-        enable: true
+        enabled: true
         path: /var/log/xroad/op-monitor.log
 
 xroad:
