--- a/src/service/proxy/proxy-application/src/main/resources/application.yaml
+++ b/src/service/proxy/proxy-application/src/main/resources/application.yaml
@@ -18,9 +18,9 @@ quarkus:
   quarkus:
     log:
       console:
-        enable: false
+        enabled: false
       file:
-        enable: true
+        enabled: true
         path: /var/log/xroad/proxy.log
       category:
         "org.niis.xroad.proxy.core.clientproxy.RequestLog":
@@ -34,7 +34,7 @@ quarkus:
       handler:
         file:
           "clientproxy-access-log":
-            enable: true
+            enabled: true
             path: /var/log/xroad/clientproxy_access.log
             format: "%s%e%n"
             encoding: utf-8
@@ -43,7 +43,7 @@ quarkus:
               file-suffix: .yyyy-MM-dd.zip
               rotate-on-boot: false
           "serverproxy-access-log":
-            enable: true
+            enabled: true
             path: /var/log/xroad/serverproxy_access.log
             format: "%s%e%n"
             encoding: utf-8
