chore: rename signer module properties to kebab-case
Refs: XRDDEV-2952

--- a/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
@@ -25,6 +25,9 @@ services:
       - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MAX-IDLE=2
       - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MIN-IDLE=1
       - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-ACQUIRE-TIMEOUT=5S
+      - XROAD_SIGNER_MODULES_SOFTHSM2_LIBRARY=/usr/lib/softhsm/libsofthsm2.so
+      - XROAD_SIGNER_MODULES_SOFTHSM2_OS_LOCKING_OK=true
+      - XROAD_SIGNER_MODULES_SOFTHSM2_LIBRARY_CANT_CREATE_OS_THREADS=true
       - QUARKUS_LOG_LEVEL=INFO
       - QUARKUS_LOG_CATEGORY__ORG_NIIS_XROAD_SIGNER__LEVEL=DEBUG
     ports:
@@ -71,6 +74,9 @@ services:
       - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MAX-IDLE=2
       - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MIN-IDLE=1
       - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-ACQUIRE-TIMEOUT=5S
+      - XROAD_SIGNER_MODULES_SOFTHSM2_LIBRARY=/usr/lib/softhsm/libsofthsm2.so
+      - XROAD_SIGNER_MODULES_SOFTHSM2_OS_LOCKING_OK=true
+      - XROAD_SIGNER_MODULES_SOFTHSM2_LIBRARY_CANT_CREATE_OS_THREADS=true
       - QUARKUS_LOG_LEVEL=INFO
       - QUARKUS_LOG_CATEGORY__ORG_NIIS_XROAD_SIGNER__LEVEL=DEBUG
     ports:
